added eda streamlit app

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,12 @@ notebook>=6.5.0
 
 # Optional: for advanced analysis
 matplotlib>=3.7.0
+seaborn>=0.12.0
+
+# Streamlit EDA app
+streamlit>=1.28.0
+plotly>=5.17.0
+pandas>=2.0.0
 
 # Environment variables
 python-dotenv>=1.0.0
